# copilot-sdk-openai-proxy

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_openai_compat.py  test_proxy.py
app/: config.py  copilot_manager.py  main.py  schemas.py
app/routers/: chat.py  embeddings.py  models.py
server/: auth.py  converters.py  handlers.py  main.py  models.py  state.py
