[project]
name = "copilot-openai-proxy"
version = "0.1.0"
description = "OpenAI-compatible proxy server powered by the GitHub Copilot SDK"
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[project.scripts]
copilot-openai-proxy = "server.main:cli"
